--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-
-# Created by https://www.gitignore.io/api/c,visualstudiocode
-# Edit at https://www.gitignore.io/?templates=c,visualstudiocode
+# Created by https://www.toptal.com/developers/gitignore/api/linux,visualstudiocode,c
+# Edit at https://www.toptal.com/developers/gitignore?templates=linux,visualstudiocode,c
 
 ### C ###
 # Prerequisites
@@ -56,15 +55,44 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
+### Linux ###
+*~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
+
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
 
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
 .history
+.ionide
 
-# End of https://www.gitignore.io/api/c,visualstudiocode
+# Support for Project snippet scope
+.vscode/*.code-snippets
+
+# Ignore code-workspaces
+*.code-workspace
+
+# End of https://www.toptal.com/developers/gitignore/api/linux,visualstudiocode,c
